# htmx-demo

./: .gitignore  README.md  manage.py  pyproject.toml  pytest.ini
bier_shop/: apps.py  forms.py  models.py  urls.py  views.py
bier_shop/migrations/: 0001_initial.py  0002_alter_bier_image_alter_biercompany_logo.py  0003_alter_biercompany_name.py
bier_shop/templates/: base.html
bier_shop/templates/bier_shop/: bier_company_details.html  bier_company_list.html
bier_shop/templates/bier_shop/components/: add_bier_button.html  add_bier_company_button.html  add_bier_company_form.html  bier_card.html  bier_company_card.html  bier_form.html
bier_shop/tests/: test_models.py  test_views.py
bier_shop/tests/factories/: bier_company_factory.py  bier_factory.py
my24späti/: asgi.py  settings.py  settings_test.py  urls.py  wsgi.py
static/bootstrap-5.1.3/css/: bootstrap.rtl.css
static/htmx/: htmx-1.7.0.min.js
