[tool.poetry]
name = "htmx-demo"
version = "0.1.0"
description = ""
authors = ["Remi BESNARD <remi@besnard-consulting.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.0.5"
django-countries = "^7.3.2"
Pillow = "^9.1.1"
crispy-bootstrap5 = "^0.6"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pytest-django = "^4.5.2"
factory-boy = "^3.2.1"
flake8 = "^4.0.1"
mypy = "^0.961"
black = "^22.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
